--- a/config.env
+++ b/config.env
@@ -1,5 +1,5 @@
 # REQUIRED CONFIG
-BOT_TOKEN = "5095623534:AAElBZZ8CY6TBzNfTiTrmgwszOSLQjG5cXs"
+BOT_TOKEN = "5056995920:AAGuQjO4sI-wv_kIepvWHP70uM_q2qPQVow"
 GDRIVE_FOLDER_ID = "0AAIEcrYzC7HWUk9PVA"
 OWNER_ID = 680745190
 DOWNLOAD_DIR = "/usr/src/app/downloads"
@@ -38,7 +38,7 @@ CUSTOM_FILENAME = ""
 UPSTREAM_REPO = "https://github.com/belikeblake/helios-mirror/"
 UPSTREAM_BRANCH = "h-code-old"
 # qBittorrent/Aria2c
-BASE_URL_OF_BOT = "https://sm2.onrender.com/"
+BASE_URL_OF_BOT = "https://sm7-2.onrender.com/"
 SERVER_PORT = "80"
 WEB_PINCODE = ""
 # RSS
