--- a/config.env
+++ b/config.env
@@ -1,6 +1,6 @@
 # REQUIRED CONFIG
-BOT_TOKEN = "5095623534:AAElBZZ8CY6TBzNfTiTrmgwszOSLQjG5cXs"
-GDRIVE_FOLDER_ID = "0AAIEcrYzC7HWUk9PVA"
+BOT_TOKEN = "5034144892:AAGt69HajvM0vTZ1JDwBxeWRr8PtjqbPxLo"
+GDRIVE_FOLDER_ID = "0ACFyXwxOwIfNUk9PVA"
 OWNER_ID = 680745190
 DOWNLOAD_DIR = "/usr/src/app/downloads"
 DOWNLOAD_STATUS_UPDATE_INTERVAL = 5
@@ -15,7 +15,7 @@ AUTHORIZED_CHATS = ""
 SUDO_USERS = "680745190"
 IGNORE_PENDING_REQUESTS = "False"
 USE_SERVICE_ACCOUNTS = "False"
-INDEX_URL = "https://x-m.sreemirror.workers.dev/0:/"
+INDEX_URL = "https://movies-tv-shows.sreemirror.workers.dev/0:/"
 STATUS_LIMIT = "4"
 STOP_DUPLICATE = "False"
 CMD_INDEX = ""
@@ -38,8 +38,8 @@ CUSTOM_FILENAME = ""
 UPSTREAM_REPO = "https://github.com/belikeblake/helios-mirror/"
 UPSTREAM_BRANCH = "h-code-old"
 # qBittorrent/Aria2c
-BASE_URL_OF_BOT = "https://sm2.onrender.com/"
-SERVER_PORT = "80"
+BASE_URL_OF_BOT = "https://moviestvx2.onrender.com/"
+SERVER_PORT = ""
 WEB_PINCODE = ""
 # RSS
 RSS_DELAY = ""
