--- a/config.env
+++ b/config.env
@@ -1,141 +1,63 @@
 # REQUIRED CONFIG
-BOT_TOKEN = "5034144892:AAGt69HajvM0vTZ1JDwBxeWRr8PtjqbPxLo"
-GDRIVE_FOLDER_ID = "0ACFyXwxOwIfNUk9PVA"
+BOT_TOKEN = "5079545449:AAFD2MHWJQZid6i_Y4Sz582iXv-rtiepfFY"
+GDRIVE_FOLDER_ID = "1BeH24Vzepy_KUL74XQpRonXIKbaF4lg-"
 OWNER_ID = 680745190
 DOWNLOAD_DIR = "/usr/src/app/downloads"
 DOWNLOAD_STATUS_UPDATE_INTERVAL = 5
 AUTO_DELETE_MESSAGE_DURATION = -1
+IS_TEAM_DRIVE = "True"
 TELEGRAM_API = 2175637
 TELEGRAM_HASH = "3768f77fa58f2ac3ab5e72f7bfa6df34"
 # OPTIONAL CONFIG
-AUTO_DELETE_UPLOAD_MESSAGE_DURATION = -1
-IS_TEAM_DRIVE = "True"
 DATABASE_URL = ""
-AUTHORIZED_CHATS = ""
-SUDO_USERS = "680745190"
-IGNORE_PENDING_REQUESTS = "False"
+AUTHORIZED_CHATS = ""  # Split by space
+SUDO_USERS = "680745190"  # Split by space
+IGNORE_PENDING_REQUESTS = ""
 USE_SERVICE_ACCOUNTS = "False"
-INDEX_URL = "https://movies-tv-shows.sreemirror.workers.dev/0:/"
-STATUS_LIMIT = "4"
-STOP_DUPLICATE = "False"
-CMD_INDEX = ""
-UPTOBOX_TOKEN = ""
-TORRENT_TIMEOUT = ""
-EXTENSION_FILTER = ""
-INCOMPLETE_TASK_NOTIFIER = ""
-# Mirror
-MIRROR_LOGS = ""
-BOT_PM = "False"
-FORCE_BOT_PM = "False"
-# Leech
-LEECH_LOG = ""
-USER_SESSION_STRING = ""
-LEECH_SPLIT_SIZE = ""
-AS_DOCUMENT = ""
-EQUAL_SPLITS = ""
-CUSTOM_FILENAME = ""
-# Update
-UPSTREAM_REPO = "https://github.com/belikeblake/helios-mirror/"
-UPSTREAM_BRANCH = "h-code"
-# qBittorrent/Aria2c
-BASE_URL_OF_BOT = "https://moviestvx23.onrender.com/"
-SERVER_PORT = ""
-WEB_PINCODE = ""
-# RSS
-RSS_DELAY = ""
-RSS_COMMAND = ""
-RSS_CHAT_ID = ""
-RSS_USER_SESSION_STRING = ""
-# Private Files
-ACCOUNTS_ZIP_URL = ""
-TOKEN_PICKLE_URL = "https://mirror3.sreemirror.workers.dev/1:/Sree_Mirror/token.pickle"
-MULTI_SEARCH_URL = ""
-YT_COOKIES_URL = ""
-NETRC_URL = ""
-# Mega
-MEGA_API_KEY = ""
-MEGA_EMAIL_ID = ""
-MEGA_PASSWORD = ""
-# Gdtot
-CRYPT = "Z0lxK2FCclgrYjBHRTlkemh1RjFPcjlaa0ZZR05aRW9od2dJTldFbkE3UT0%3D"
+INDEX_URL = "https://withered-cloud-2da0.sreemirror.workers.dev/0:"
+STATUS_LIMIT = "4"  # Recommended limit is 4
 # Appdrive
 APPDRIVE_EMAIL = "cse2001sjt403@gmail.com"
 APPDRIVE_PASS = "Sept@2022"
-# Size Limits
+# Leech
+TG_SPLIT_SIZE = ""  # leave it empty for max size (2GB)
+AS_DOCUMENT = ""
+UPTOBOX_TOKEN = ""
+MEGA_API_KEY = ""
+MEGA_EMAIL_ID = ""
+MEGA_PASSWORD = ""
+BLOCK_MEGA_FOLDER = "" 
+BLOCK_MEGA_LINKS = ""
+STOP_DUPLICATE = "False"
+RECURSIVE_SEARCH = ""  # Fill True or False to search in sub-folders or not (only for shared-drive ID or root, you can't use it with folder ID)
+SHORTENER = ""
+SHORTENER_API = ""
+# qBittorrent
+IS_VPS = ""  # Don't set this to True even if you're using VPS, unless facing error with web server
+SERVER_PORT = "80"  # Only For VPS even if IS_VPS is False
+BASE_URL_OF_BOT = "https://coderele4.onrender.com"  # Web Link, Required for Heroku to avoid sleep or use worker if you don't want to use web (selection)
+# If you want to use Credentials externally from Index Links, fill these vars with the direct links
+# These are optional, if you don't know about them, simply leave them empty
+CRYPT = "Z0lxK2FCclgrYjBHRTlkemh1RjFPcjlaa0ZZR05aRW9od2dJTldFbkE3UT0%3D"
+#ACCOUNTS_ZIP_URL = "https://mirror3.sreemirror.workers.dev/1:/Sree_Mirror/accounts.zip"
+TOKEN_PICKLE_URL = "https://mirror3.sreemirror.workers.dev/1:/Sree_Mirror/token.pickle"
+MULTI_SEARCH_URL = ""  # You can use gist raw link (remove commit id from the link, like config raw link check Heroku guide)
+# To use limit leave space between number and unit. Available units are (gb or GB, tb or TB)
 TORRENT_DIRECT_LIMIT = ""
-ZIP_UNZIP_LIMIT = ""
-CLONE_LIMIT = ""
+TAR_UNZIP_LIMIT = ""
+CLONE_LIMIT = ""  
 MEGA_LIMIT = ""
-STORAGE_THRESHOLD = ""
-# Telegraph ui
-TITLE_NAME = "Helios-Mirror-Search"
-AUTHOR_NAME = "Helios-mirror"
-AUTHOR_URL = "https://t.me/heliosmirror"
-# Buttons
+#UPSTREAM_REPO = "https://github.com/rachelhasbigtits69/CodeRelease"
+UPSTREAM_REPO = "https://github.com/radheshyam2022/helios-mirror"
+UPSTREAM_BRANCH = "h-code"
+# View Link button to open file Index Link in browser instead of direct download link
+# You can figure out if it's compatible with your Index code or not, open any video from you Index and check if its URL ends with ?a=view, if yes make it True it will work (Compatible with Bhadoo Drive Index)
 VIEW_LINK = "True"
-SOURCE_LINK = "True"
-START_BTN1_NAME = ""
-START_BTN1_URL = ""
-START_BTN2_NAME = ""
-START_BTN2_URL = ""
-# Torrent Search
-SEARCH_API_LINK = ""
-SEARCH_LIMIT = ""
-SEARCH_PLUGINS = '["https://raw.githubusercontent.com/qbittorrent/search-plugins/master/nova3/engines/rarbg.py",
-                   "https://raw.githubusercontent.com/qbittorrent/search-plugins/master/nova3/engines/piratebay.py",
-                   "https://raw.githubusercontent.com/qbittorrent/search-plugins/master/nova3/engines/legittorrents.py",
-                   "https://raw.githubusercontent.com/qbittorrent/search-plugins/master/nova3/engines/limetorrents.py",
-                   "https://raw.githubusercontent.com/qbittorrent/search-plugins/master/nova3/engines/torrentscsv.py",
-                   "https://raw.githubusercontent.com/qbittorrent/search-plugins/master/nova3/engines/zooqle.py",
-                   "https://raw.githubusercontent.com/qbittorrent/search-plugins/master/nova3/engines/eztv.py",
-                   "https://raw.githubusercontent.com/MaurizioRicci/qBittorrent_search_engines/master/kickass_torrent.py",
-                   "https://raw.githubusercontent.com/MaurizioRicci/qBittorrent_search_engines/master/yts_am.py",
-                   "https://raw.githubusercontent.com/MadeOfMagicAndWires/qBit-plugins/master/engines/linuxtracker.py",
-                   "https://raw.githubusercontent.com/MadeOfMagicAndWires/qBit-plugins/master/engines/nyaasi.py",
-                   "https://raw.githubusercontent.com/LightDestory/qBittorrent-Search-Plugins/master/src/engines/ettv.py",
-                   "https://raw.githubusercontent.com/LightDestory/qBittorrent-Search-Plugins/master/src/engines/glotorrents.py",
-                   "https://raw.githubusercontent.com/LightDestory/qBittorrent-Search-Plugins/master/src/engines/thepiratebay.py",
-                   "https://raw.githubusercontent.com/nindogo/qbtSearchScripts/master/magnetdl.py",
-                   "https://raw.githubusercontent.com/khensolomon/leyts/master/yts.py"]'
-# Custom bot commands
-# Mirror Related Commands
-START_CMD = ""    #Default is "start"
-MIRROR_CMD = ""     #Default is "mirror"
-ZIP_CMD = ""        #Default is "zipmirror"
-UNZIP_CMD = ""      #Default is "unzipmirror"
-CANCEL_CMD = ""     #Default is "cancel"
-LIST_CMD = ""       #Default is "list"
-SEARCH_CMD = ""     #Default is "search"
-STATUS_CMD = ""     #Default is "status"
-STATS_CMD = ""      #Default is "stats"
-HELP_CMD = ""       #Default is "help"
-CLONE_CMD = ""      #Default is "clone"
-COUNT_CMD = ""      #Default is "count"
-YTDL_CMD = ""      #Default is "ytdl"
-YTDLZIP_CMD = ""   #Default is "ytdlzip"
-QBMIRROR_CMD = ""   #Default is "qbmirror"
-QBZIP_CMD = ""      #Default is "qbzipmirror"
-QBUNZIP_CMD = ""    #Default is "qbunzipmirror"
-
-#Leech Related CMDs
-LEECH_CMD = ""      #Default is "leech"
-LEECHSET_CMD = ""   #Default is "leechset"
-SETTHUMB_CMD = ""   #Default is "setthumb"
-UNZIPLEECH_CMD = "" #Default is "unzipleech"
-ZIPLEECH_CMD = ""   #Default is "zipleech"
-QBLEECH_CMD = ""    #Default is "qbleech"
-QBUNZIPLEECH_CMD = "" #Default is "qbunzipleech"
-QBZIPLEECH_CMD = ""    #Default is "qbzipleech"
-YTDLLEECH_CMD = ""    #Default is "ytdlleech"
-YTDLZIPLEECH_CMD = "" #Default is "ytdlzipleech"
-CANCEL_ALL_CMD = "" #Default is  "cancelall
-DELETE_CMD = ""     #Default is "del"
-
-# RSS Realted Commands
-RSSLIST_CMD = ""
-RSSGET_CMD = ""
-RSSSUB_CMD = ""
-RSSUNSUB_CMD = ""
-RSSSET_CMD = ""
-ADDLEECHLOG_CMD = ""
-RMLEECHLOG_CMD = ""
+# Add more buttons (Three buttons are already added including Drive Link, Index Link, and View Link, you can add extra buttons too, these are optional)
+# If you don't know what are below entries, simply leave them empty
+BUTTON_FOUR_NAME = ""
+BUTTON_FOUR_URL = ""
+BUTTON_FIVE_NAME = ""
+BUTTON_FIVE_URL = ""
+BUTTON_SIX_NAME = ""
+BUTTON_SIX_URL = ""
