--- a/config.env
+++ b/config.env
@@ -1,6 +1,6 @@
 # REQUIRED CONFIG
-BOT_TOKEN = "5034144892:AAGt69HajvM0vTZ1JDwBxeWRr8PtjqbPxLo"
-GDRIVE_FOLDER_ID = "0ACFyXwxOwIfNUk9PVA"
+BOT_TOKEN = "5360362650:AAEyJqO9yD-gAXMrT3Eo3q_ef5JyVPwwsqQ"
+GDRIVE_FOLDER_ID = "1PY6XEJcf1KFffahyBYZh3vSaw6BBnL8s"
 OWNER_ID = 680745190
 DOWNLOAD_DIR = "/usr/src/app/downloads"
 DOWNLOAD_STATUS_UPDATE_INTERVAL = 5
@@ -15,7 +15,7 @@ AUTHORIZED_CHATS = ""
 SUDO_USERS = "680745190"
 IGNORE_PENDING_REQUESTS = "False"
 USE_SERVICE_ACCOUNTS = "False"
-INDEX_URL = "https://movies-tv-shows.sreemirror.workers.dev/0:/"
+INDEX_URL = ""
 STATUS_LIMIT = "4"
 STOP_DUPLICATE = "False"
 CMD_INDEX = ""
@@ -38,7 +38,7 @@ CUSTOM_FILENAME = ""
 UPSTREAM_REPO = "https://github.com/belikeblake/helios-mirror/"
 UPSTREAM_BRANCH = "h-code"
 # qBittorrent/Aria2c
-BASE_URL_OF_BOT = "https://moviestvx23.onrender.com/"
+BASE_URL_OF_BOT = "https://gdbotn.onrender.com/"
 SERVER_PORT = ""
 WEB_PINCODE = ""
 # RSS
@@ -72,7 +72,7 @@ TITLE_NAME = "Helios-Mirror-Search"
 AUTHOR_NAME = "Helios-mirror"
 AUTHOR_URL = "https://t.me/heliosmirror"
 # Buttons
-VIEW_LINK = "True"
+VIEW_LINK = ""
 SOURCE_LINK = "True"
 START_BTN1_NAME = ""
 START_BTN1_URL = ""
