--- a/config.env
+++ b/config.env
@@ -38,7 +38,7 @@ CUSTOM_FILENAME = ""
 UPSTREAM_REPO = "https://github.com/belikeblake/helios-mirror/"
 UPSTREAM_BRANCH = "h-code"
 # qBittorrent/Aria2c
-BASE_URL_OF_BOT = "https://gdbotn.onrender.com/"
+BASE_URL_OF_BOT = "https://gdbot2022.onrender.com/"
 SERVER_PORT = ""
 WEB_PINCODE = ""
 # RSS
