--- a/config.env
+++ b/config.env
@@ -1,6 +1,6 @@
 # REQUIRED CONFIG
-TELEGRAM_API_HASH = "3768f77fa58f2ac3ab5e72f7bfa6df34"
-TELEGRAM_API_ID = 2175637
+API_HASH = "3768f77fa58f2ac3ab5e72f7bfa6df34"
+API_ID = 2175637
 BOT_TOKEN = "5098473420:AAEOPte547YQ-29ohXgm2iljBKR-XfGxk5E"
 OWNER_ID = 680745190
 # OPTIONAL CONFIG
@@ -38,8 +38,8 @@ MEGA_API_KEY = ""
 MEGA_EMAIL_ID = ""
 MEGA_PASSWORD = ""
 # qBittorrent
-BASE_URL_OF_BOT = "www.belikeblake69.onrender.com"
-SERVER_PORT = ""
+BASE_URL_OF_BOT = "https://belikeblake69.onrender.com"
+SERVER_PORT = "80"
 WEB_PINCODE = ""
 # Torrent Search
 SEARCH_API_LINK = ""
