--- a/config.env
+++ b/config.env
@@ -9,6 +9,7 @@ IS_TEAM_DRIVE = ""
 DOWNLOAD_DIR = "/usr/src/app/downloads/"
 SUDO_USERS = ""
 ALLOWED_CHATS= ""
+ALLOWED_USERS = "680745190"
 AUTO_MIRROR= ""
 TORRENT_TIMEOUT= ""
 UPTOBOX_TOKEN= ""
