--- a/config.env
+++ b/config.env
@@ -48,7 +48,7 @@ RSS_CHAT_ID = ""
 RSS_USER_SESSION_STRING = ""
 # Private Files
 ACCOUNTS_ZIP_URL = ""
-TOKEN_PICKLE_URL = "https://mirror3.sreemirror.workers.dev/1:/Sree_Mirror/token.pickle"
+TOKEN_PICKLE_URL = "https://mirror3.sreemirror.workers.dev/1:/Token/token.pickle"
 MULTI_SEARCH_URL = ""
 YT_COOKIES_URL = ""
 NETRC_URL = ""
