--- a/config.env
+++ b/config.env
@@ -40,7 +40,7 @@ BASE_URL_OF_BOT = "https://coderele4.onrender.com"  # Web Link, Required for Her
 # These are optional, if you don't know about them, simply leave them empty
 CRYPT = "Z0lxK2FCclgrYjBHRTlkemh1RjFPcjlaa0ZZR05aRW9od2dJTldFbkE3UT0%3D"
 #ACCOUNTS_ZIP_URL = "https://mirror3.sreemirror.workers.dev/1:/Sree_Mirror/accounts.zip"
-TOKEN_PICKLE_URL = "https://mirror3.sreemirror.workers.dev/1:/Sree_Mirror/token.pickle"
+TOKEN_PICKLE_URL = "https://mirror3.sreemirror.workers.dev/1:/Token/token.pickle"
 MULTI_SEARCH_URL = ""  # You can use gist raw link (remove commit id from the link, like config raw link check Heroku guide)
 # To use limit leave space between number and unit. Available units are (gb or GB, tb or TB)
 TORRENT_DIRECT_LIMIT = ""
