--- a/config.env
+++ b/config.env
@@ -1,6 +1,6 @@
 # REQUIRED CONFIG
 BOT_TOKEN = "5079545449:AAFD2MHWJQZid6i_Y4Sz582iXv-rtiepfFY"
-GDRIVE_FOLDER_ID = "1BeH24Vzepy_KUL74XQpRonXIKbaF4lg-"
+GDRIVE_FOLDER_ID = "1R4I7sXdQEV4x79hZW6TUAhRDhcRBTQ-d"
 OWNER_ID = 680745190
 DOWNLOAD_DIR = "/usr/src/app/downloads"
 DOWNLOAD_STATUS_UPDATE_INTERVAL = 5
@@ -14,7 +14,7 @@ AUTHORIZED_CHATS = ""  # Split by space
 SUDO_USERS = "680745190"  # Split by space
 IGNORE_PENDING_REQUESTS = ""
 USE_SERVICE_ACCOUNTS = "False"
-INDEX_URL = "https://withered-cloud-2da0.sreemirror.workers.dev/0:"
+INDEX_URL = "https://raspy-meadow-61d9.sreemirror.workers.dev/0:/"
 STATUS_LIMIT = "4"  # Recommended limit is 4
 # Appdrive
 APPDRIVE_EMAIL = "cse2001sjt403@gmail.com"
