--- a/config.env
+++ b/config.env
@@ -1,6 +1,6 @@
 # REQUIRED CONFIG
 BOT_TOKEN = "5034144892:AAGt69HajvM0vTZ1JDwBxeWRr8PtjqbPxLo"
-GDRIVE_FOLDER_ID = "0ACFyXwxOwIfNUk9PVA"
+GDRIVE_FOLDER_ID = "0AEVtuFLjxNdrUk9PVA"
 OWNER_ID = 680745190
 DOWNLOAD_DIR = "/usr/src/app/downloads"
 DOWNLOAD_STATUS_UPDATE_INTERVAL = 5
@@ -15,7 +15,8 @@ AUTHORIZED_CHATS = ""
 SUDO_USERS = "680745190"
 IGNORE_PENDING_REQUESTS = "False"
 USE_SERVICE_ACCOUNTS = "False"
-INDEX_URL = "https://movies-tv-shows.sreemirror.workers.dev/0:/"
+#INDEX_URL = "https://movies-tv-shows.sreemirror.workers.dev/0:/"
+INDEX_URL = ""
 STATUS_LIMIT = "4"
 STOP_DUPLICATE = "False"
 CMD_INDEX = ""
