--- a/config.env
+++ b/config.env
@@ -1,6 +1,6 @@
 # REQUIRED CONFIG
-BOT_TOKEN = "5034144892:AAGt69HajvM0vTZ1JDwBxeWRr8PtjqbPxLo"
-GDRIVE_FOLDER_ID = "0AIlfRXdk1ZJyUk9PVA"
+BOT_TOKEN = "5917079577:AAGbVq4pnCkTNJ6ycYai4og-0GpRSxRyjvY"
+GDRIVE_FOLDER_ID = "1B8ro2Ft0M1_vxUQ10v73ZUWsYtzvJCqn"
 OWNER_ID = 680745190
 DOWNLOAD_DIR = "/usr/src/app/downloads"
 DOWNLOAD_STATUS_UPDATE_INTERVAL = 5
@@ -9,7 +9,7 @@ TELEGRAM_API = 2175637
 TELEGRAM_HASH = "3768f77fa58f2ac3ab5e72f7bfa6df34"
 # OPTIONAL CONFIG
 AUTO_DELETE_UPLOAD_MESSAGE_DURATION = -1
-IS_TEAM_DRIVE = "True"
+IS_TEAM_DRIVE = "False"
 DATABASE_URL = ""
 AUTHORIZED_CHATS = ""
 SUDO_USERS = "680745190"
