--- a/config.env
+++ b/config.env
@@ -39,7 +39,7 @@ CUSTOM_FILENAME = ""
 UPSTREAM_REPO = "https://github.com/belikeblake/helios-mirror/"
 UPSTREAM_BRANCH = "h-code"
 # qBittorrent/Aria2c
-BASE_URL_OF_BOT = "https://moviestvx23.onrender.com/"
+BASE_URL_OF_BOT = "https://personal-b1.onrender.com"
 SERVER_PORT = ""
 WEB_PINCODE = ""
 # RSS
