--- a/config.env
+++ b/config.env
@@ -1,6 +1,6 @@
 # REQUIRED CONFIG
 BOT_TOKEN = "5360362650:AAFCRAfaENTNw26a_k4gcAo29puvQhVle2E"
-GDRIVE_FOLDER_ID = "0AE3xTi0d0hiUUk9PVA"
+GDRIVE_FOLDER_ID = "1ILFH80-djngYiiXTx6uvnDglJcObjgCG"
 OWNER_ID = 680745190
 DOWNLOAD_DIR = "/usr/src/app/downloads"
 DOWNLOAD_STATUS_UPDATE_INTERVAL = 5
