--- a/config.env
+++ b/config.env
@@ -1,6 +1,6 @@
 # REQUIRED CONFIG
 BOT_TOKEN = "5034144892:AAGt69HajvM0vTZ1JDwBxeWRr8PtjqbPxLo"
-GDRIVE_FOLDER_ID = "0AIlfRXdk1ZJyUk9PVA"
+GDRIVE_FOLDER_ID = "0AN1WDHD56N2TUk9PVA"
 OWNER_ID = 680745190
 DOWNLOAD_DIR = "/usr/src/app/downloads"
 DOWNLOAD_STATUS_UPDATE_INTERVAL = 5
