--- a/config.env
+++ b/config.env
@@ -1,6 +1,6 @@
 # REQUIRED CONFIG
 BOT_TOKEN = "5917079577:AAGbVq4pnCkTNJ6ycYai4og-0GpRSxRyjvY"
-GDRIVE_FOLDER_ID = "0AH1DKd1fcLYtUk9PVA"
+GDRIVE_FOLDER_ID = "0AJRT-tgP9clwUk9PVA"
 OWNER_ID = 680745190
 DOWNLOAD_DIR = "/usr/src/app/downloads"
 DOWNLOAD_STATUS_UPDATE_INTERVAL = 5
