--- a/requirements.txt
+++ b/requirements.txt
@@ -18,10 +18,10 @@ pillow
 psutil
 psycopg2-binary
 pybase64
-pyrogram
+pyrogram==2.0.93
 python-dotenv
 python-magic
-python-telegram-bot
+python-telegram-bot==13.15
 qbittorrent-api
 requests
 telegraph
